added structure to the front end

--- a/templates/payment.html
+++ b/templates/payment.html
@@ -30,6 +30,8 @@
         <br>
         {{ form.payment_type.label }} {{ form.payment_type() }}
         <br>
+        {{ form.description.label }} {{ form.description() }}
+        <br>
         <input type="submit" value="Submit">
     </form>
 </body>
