--- a/templates/loan_account.html
+++ b/templates/loan_account.html
@@ -19,28 +19,30 @@
     <p>Name: {{ person.name }}</p>
     <p>Company: {{ person.company }}</p>
     <p>Member ID: {{ person.employee_id }}</p>
+    <p>Loan:{{person.loan_balance}}</p>
+    
     <table>
         <thead>
             <tr>
                 <th>Date</th>
-                <th>Payment ID</th>
-                <th>Description</th>
                 <th>Amount</th>
+                <th>Interest</th>
+                <th>Balance</th>
             </tr>
         </thead>
         <tbody>
-            {% for payment in payments %}
-                {% if payment.loan == True %}
+            {% for loan in loans %}
+                
                     <tr>
-                        <td>{{ payment.date }}</td>
-                        <td>{{ payment.id }}</td>
-                        <td>{{ payment.description }}</td>
-                        <td>{{ payment.amount }}</td>
+                        <td>{{ loan.start_date }}</td>                    
+                        <td>{{ loan.amount }}</td>
+                        <td>{{ (loan.amount * (loan.interest_rate/100)) }}</td>
+                        <td>{{ person.loan_balance}}</td>
                     </tr>
-                {% endif %}
+                
             {% endfor %}
         </tbody>
     </table>
-    <h1>Total balance: {{ person.total_balance }}</h1>
+
 </body>
 </html>
