--- a/templates/savings_payment.html
+++ b/templates/savings_payment.html
@@ -23,6 +23,7 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Amount</th>
+                
             </tr>
         </thead>
         <tbody>
@@ -32,12 +33,13 @@
                     <td>
                         {% for person in persons %}
                             {% if payment.person_id == person.id %}
-                                {{ person.name }}
+                                <a href="{{url_for('savings_account',person_id=person.id)}}">{{ person.name }}</a>
                             {% endif %}
                         {% endfor %}
                     </td>
                     <td>{{ payment.description }}</td>
                     <td>{{ payment.amount }}</td>
+                    
                 </tr>
             {% endfor %}
         </tbody>
