code for demo fixed loan balance error

--- a/templates/Bank_report.html
+++ b/templates/Bank_report.html
@@ -20,7 +20,7 @@
     <h2>Bank Details</h2>
     <p>Bank ID: {{ bank.id }}</p>
     <p>Name: {{ bank.name }}</p>
-    <p>Balance BFW: {{ bank.balance_bfw }}</p>
+    <p>Balance BFW: {{ bank.balance_bfd }}</p>
     <p>Balance: {{ bank.new_balance }}</p>
 
     <h2>Payments Received</h2>
