--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
             <li><a href="{{ url_for('create_bank') }}">Create Bank</a></li>
             <li><a href="{{ url_for('create_company') }}">Create Company</a></li>
             <li><a href="{{ url_for('create_person') }}">Create Member</a></li>
+            <li><a href="{{ url_for('create_loan') }}">Create Loan</a></li>
             <li><a href="{{ url_for('make_payment') }}">Make Payment</a></li>
             <li><a href="{{ url_for('get_income') }}">Input Income </a></li>
             
