--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Upload Excel File</h1>
     <form method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".xlsx">
+        <input type="file" name="file" accept=".xlsx, .xls">
         <input type="submit" value="Upload">
     </form>
 </body>
