--- a/templates/savings_account.html
+++ b/templates/savings_account.html
@@ -17,13 +17,13 @@
 <body>
     <h1>Coolink Cooperative Savings Account</h1>
     <p>Name: {{ person.name }}</p>
-    <p>Company: {{ company.name }}</p>
+    <p>Company: {{ person.company.name }}</p>
     <p>Member ID: {{ person.employee_id }}</p>
     <table>
         <thead>
             <tr>
                 <th>Date</th>
-                <th>Payment ID</th>
+                <th>Refrence Number</th>
                 <th>Description</th>
                 <th>Amount</th>
                 <th>Balance</th>
@@ -31,18 +31,18 @@
         </thead>
         <tbody>
             {% for payment in payments %}
-                {% if payment.loan == False %}
+                
                     <tr>
                         <td>{{ payment.date }}</td>
-                        <td>{{ payment.id }}</td>
+                        <td>{{ payment.ref_no }}</td>
                         <td>{{ payment.description }}</td>
-                        <td>{{ payment.amount }}</td>
-                        <td>{{ payment.balance }}</td>
+                        <td>{{ payment.amount| currency }}</td>
+                        <td>{{ payment.balance| currency }}</td>
                     </tr>
-                {% endif %}
+                
             {% endfor %}
         </tbody>
     </table>
-    <h1>Total balance: {{ person.total_balance }}</h1>
+    <h1>Total balance: {{ person.total_balance | currency }}</h1>
 </body>
 </html>
