--- a/templates/loans.html
+++ b/templates/loans.html
@@ -27,9 +27,9 @@
                 <tr>
                     <td>{{ loan.id }}</td>
                     <td><a href="{{url_for('loan_account',person_id=loan.person.id)}}">{{ loan.person.name }}</a></td>  <!-- Fetching the person's name -->
-                    <td>{{ loan.amount  }}</td>
+                    <td>{{ loan.amount | currency }}</td>
                     <td>{{ loan.interest_rate }}</td>
-                    <td>{{ loan.person.loan_balance }}</td>
+                    <td>{{ loan.person.loan_balance | currency }}</td>
                     <td>{{ loan.start_date }}</td>
                     <td>{{ loan.end_date }}</td>
                     <td>{{ loan.is_paid }}</td>
