added dowloads to all queries

--- a/templates/query/savings_account.html
+++ b/templates/query/savings_account.html
@@ -62,8 +62,8 @@
         var buttonPdf = document.getElementById("downloadPdfButton");
 
         // Define the link URL
-        var linkUrlExcel = "{{url_for('download_savings_excel',person_id=person.id)}}";
-        var linkUrlPdf = "{{url_for('download_savings_pdf',person_id=person.id)}}";
+        var linkUrlExcel = "{{url_for('download_excel',type='savings',type_id=person.id)}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='savings',type_id=person.id)}}";
 
         // Add a click event listener to the button
         buttonExcel.addEventListener("click", function() {
