--- a/templates/query/loan_account.html
+++ b/templates/query/loan_account.html
@@ -39,7 +39,7 @@
                 <td> - </td>
                 <td>Balance B/FWD</td>
                 <td>{{ person.loan_balance_bfd| currency }}</td>
-                <td>{{ person.loan_balance| currency }}</td>
+                <td>{{ person.loan_balance_bfd| currency }}</td>
             </tr>
                 {% for payment in payments %}
                         <tr>
@@ -53,5 +53,30 @@
             
         </tbody>
     </table>
+    <h2>Download Excel Report</h2>
+    <button id="downloadExcelButton">Download Report</button>
+
+    <h2>Download PDF Report</h2>
+    <button id="downloadPdfButton">Download Report</button>
+
+    <script>
+        // Get the button element by its ID
+        var buttonExcel = document.getElementById("downloadExcelButton");
+        var buttonPdf = document.getElementById("downloadPdfButton");
+
+        // Define the link URL
+        var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id=person.id)}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id=person.id)}}";
+
+        // Add a click event listener to the button
+        buttonExcel.addEventListener("click", function() {
+            // Redirect to the link URL
+            window.location.href = linkUrlExcel;
+        });
+        buttonPdf.addEventListener("click", function() {
+            // Redirect to the link URL
+            window.location.href = linkUrlPdf;
+        });
+    </script>
 </body>
 </html>
