--- a/templates/query/person.html
+++ b/templates/query/person.html
@@ -18,9 +18,8 @@
     <h1>Person Details</h1>
     <table>
         <tr>
-            <th>ID</th>
-            <th>Is Admin</th>
             <th>Employee ID</th>
+            <th>Is Admin</th>
             <th>Name</th>
             <th>Email</th>
             <th>Phone Number</th>
@@ -30,9 +29,8 @@
         </tr>
         {%for person in persons%}
         <tr>
-            <td>{{ person.id }}</td>
-            <td>{{ person.is_admin }}</td>
             <td>{{ person.employee_id }}</td>
+            <td>{{ person.is_admin }}</td>
             <td>{{ person.name }}</td>
             <td>{{ person.email }}</td>
             <td>{{ person.phone_no }}</td>
@@ -42,5 +40,30 @@
         </tr>
         {%endfor%}
     </table>
+    <h2>Download Excel Report</h2>
+    <button id="downloadExcelButton">Download Report</button>
+
+    <h2>Download PDF Report</h2>
+    <button id="downloadPdfButton">Download Report</button>
+
+    <script>
+        // Get the button element by its ID
+        var buttonExcel = document.getElementById("downloadExcelButton");
+        var buttonPdf = document.getElementById("downloadPdfButton");
+
+        // Define the link URL
+        var linkUrlExcel = "{{url_for('download_excel',type='persons',type_id=None)}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='persons',type_id=None)}}";
+
+        // Add a click event listener to the button
+        buttonExcel.addEventListener("click", function() {
+            // Redirect to the link URL
+            window.location.href = linkUrlExcel;
+        });
+        buttonPdf.addEventListener("click", function() {
+            // Redirect to the link URL
+            window.location.href = linkUrlPdf;
+        });
+    </script>
 </body>
 </html>
