--- a/templates/query/income.html
+++ b/templates/query/income.html
@@ -46,8 +46,8 @@
         var buttonPdf = document.getElementById("downloadPdfButton");
 
         // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='income',type_id=None)}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='income',type_id=None)}}";
+        var linkUrlExcel = "{{url_for('download_excel',type='income',type_id='None')}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='income',type_id='None')}}";
 
         // Add a click event listener to the button
         buttonExcel.addEventListener("click", function() {
