--- a/templates/query/loans.html
+++ b/templates/query/loans.html
@@ -50,8 +50,8 @@
         var buttonPdf = document.getElementById("downloadPdfButton");
 
         // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id=None)}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id=None)}}";
+        var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id='None')}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id='None')}}";
 
         // Add a click event listener to the button
         buttonExcel.addEventListener("click", function() {
