--- a/templates/query/savings_payment.html
+++ b/templates/query/savings_payment.html
@@ -57,8 +57,8 @@
         var buttonPdf = document.getElementById("downloadPdfButton");
 
         // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='savings',type_id=None)}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='savings',type_id=None)}}";
+        var linkUrlExcel = "{{url_for('download_excel',type='savings',type_id='None')}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='savings',type_id='None')}}";
 
         // Add a click event listener to the button
         buttonExcel.addEventListener("click", function() {
