added login and income form

--- a/templates/forms/company_form.html
+++ b/templates/forms/company_form.html
@@ -19,6 +19,8 @@
         {{ form.hidden_tag() }}
         {{ form.name.label }} {{ form.name() }}
         <br>
+        {{ form.balance_bfd.label }} {{ form.balance_bfd() }}
+        <br>
         <input type="submit" value="Create">
     </form>
 </body>
