--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,8 @@
             <li><a href="{{ url_for('create_person') }}">Create Member</a></li>
             <li><a href="{{ url_for('create_loan') }}">Create Loan</a></li>
             <li><a href="{{ url_for('make_payment') }}">Make Payment</a></li>
+            <li><a href="{{ url_for('make_income') }}">Input Income</a></li>
+            <li><a href="{{ url_for('create_expense') }}">Add Expense</a></li>
            
         </ul>
     </nav>
