--- a/templates/query/expense.html
+++ b/templates/query/expense.html
@@ -1,7 +1,7 @@
 <!-- payments.html -->
 <html>
 <head>
-    <title>Person Payments</title>
+    <title>Expense</title>
     <style>
         table {
             width: 100%;
@@ -15,42 +15,27 @@
     </style>
 </head>
 <body>
-    <h1>Coolink Cooperative Loan Account</h1>
-    <p>Name: {{ person.name }}</p>
-    <p>Company: {{ person.company.name }}</p>
-    <p>Member ID: {{ person.employee_id }}</p>
-    <p>Loan: {{ person.loan_balance | currency }}</p>
-    
-    <h2>Payments</h2>
+    <h1>Coolink Cooperative Expense Account</h1>
     <table>
         <thead>
             <tr>
                 <th>Date</th>
-                <th>Refrence Number</th>
+                <th>Reference Number</th>
                 <th>Description</th>
                 <th>Amount</th>
                 <th>Balance</th>
             </tr>
         </thead>
         <tbody>
-            
-            <tr>
-                <td> - </td>
-                <td> - </td>
-                <td>Balance B/FWD</td>
-                <td>{{ person.loan_balance_bfd| currency }}</td>
-                <td>{{ person.loan_balance_bfd| currency }}</td>
-            </tr>
-                {% for payment in payments %}
-                        <tr>
-                            <td>{{ payment.date }}</td>
-                            <td>{{ payment.ref_no }}</td>
-                            <td>{{ payment.description }}</td>
-                            <td>{{-payment.amount | currency }}</td>
-                            <td>{{ payment.balance | currency }}</td>
-                        </tr>
-                {% endfor %}
-            
+            {% for expense in expenses %}
+                <tr>
+                    <td>{{ expense.date }}</td>
+                    <td>{{ expense.ref_no }}</td>
+                    <td>{{ expense.description }}</td>
+                    <td>{{ expense.amount | currency }}</td>
+                    <td>{{ expense.balance | currency}}</td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
     <h2>Download Excel Report</h2>
@@ -65,8 +50,8 @@
         var buttonPdf = document.getElementById("downloadPdfButton");
 
         // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id=person.id)}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id=person.id)}}";
+        var linkUrlExcel = "{{url_for('download_excel',type='expense',type_id='None')}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='expense',type_id='None')}}";
 
         // Add a click event listener to the button
         buttonExcel.addEventListener("click", function() {
