--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,21 +7,20 @@
 
 /* Login page start  hex= D7262C, d7262c82*/
 
-body {
+.login {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #d7262c82;
+    background-color: #483d8b;
     background-size: cover;
     background-position: center;
-    /* background-image: url('static\images\redback3.jpg'); */
 }
 
-.wrapper {
+.login .wrapper {
     width:420px;
     background: transparent;
-    color: white;
+    /* color: white; */
     border-radius: 10px;
     padding: 30px 40px;
     border:2px solid rgba(255, 255, 255, .2);
@@ -29,20 +28,19 @@ body {
     box-shadow: 0 0 10px rgba(0,0,0,.2);
 }
 
-.wrapper img{
+.login .wrapper img{
     max-width: 100%;
     padding-bottom: 15px;
 }
 
-.wrapper .input-box {
+.login .wrapper .input-box {
     width: 100%;
     height: 50px;
-
     margin: 30px 0;
     position: relative;
 }
 
-.input-box input {
+.login .input-box input {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -55,11 +53,11 @@ body {
     color: #fff;
 }
 
-.input-box input::placeholder{
-    color: #fff;
+.login .input-box input::placeholder{
+    color: #000;
 }
 
-.input-box i{
+.login .input-box i{
     position: absolute;
     right: 20px;
     top: 50%;
@@ -67,7 +65,7 @@ body {
     font-size: 20px;
 }
 
-.wrapper .btn {
+.login .wrapper .btn {
     width: 100%;
     height: 45px;
     background: #fff;
@@ -82,3 +80,103 @@ body {
 }
 
 /* Login page end */
+
+/* index page start */
+.index {
+    background-color: #483d8b;
+    margin: 0 auto;
+    max-width: 50em;
+    line-height: 1.5;
+    padding: 4em 1em;
+    color: #000;
+}
+
+.index #topic{
+    margin-top: 1em;
+    padding-top: 1em;
+    color: #000;
+    display: block;
+}
+
+.index .all-cards {
+    display: flex;
+    flex-wrap: wrap;
+    /* border-radius: 10px;
+    padding: 30px 40px;
+    border:2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    text-align: center; */
+}
+
+.index .all-cards * {
+    flex: 1 1 200px;
+    
+}
+.index .card {
+    background: transparent;
+    margin: 10px;
+    /* display: flex; */
+    border-radius: 10px;
+    padding: 30px 40px;
+    border:2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    /* text-align: center; */
+}
+
+.index .card:hover {
+    border: 1px solid #746cc0;
+    background: #746cc0;
+    transition: 1s;
+}
+
+
+.index a{
+    color: #000;
+    line-height: 2.5;
+    text-decoration: none;
+}
+
+.index a:hover {
+    text-decoration: underline;
+    transition: 1s;
+}
+
+.index #nav {
+    border-bottom: #000 solid;
+    /* border-style: solid; */
+}
+
+.index #nav a{
+    font-size: 10px;
+    /* font-weight: 300; */
+}
+
+.index #nav .tail{
+    float: right;
+}
+
+.index #nav a{
+    font-size: 30px;
+}
+
+.index #nav a:hover{
+    text-decoration: none;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    transition: 0s;
+}
+
+.index #nav a i:hover{
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    transition: 0s;
+}
+
+.index #topic h1{
+    text-align: center;
+}
+
+/* .index .card .container a{
+    font-size: 15px;
+} */
+/* index page end */
