--- a/templates/login1.html
+++ b/templates/login1.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="\static\css\style.css">
 </head>
-<body>
+<body class='login'>
     <div class="wrapper">
         <form action="POST">
-            <img src="\static\images\coolink2.png" alt="coollinks-logo">
+            <!-- <img src="\static\images\coolink2.png" alt="coollinks-logo"> -->
             
+            <h1 style='text-align: center'> Login </h1>
             <div class="input-box">
                 <input type="text" placeholder="username" required>
                 <!-- <i class="fa-solid fa-user" style="color: #f80d0d;"></i> -->
