--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
             <li><a href="{{ url_for('get_loan') }}">Members Loan</a></li>
             <li><a href="{{ url_for('bank_report') }}">Bank Report</a></li>
             <li><a href="{{ url_for('get_income') }}">Income Statement</a></li>
+            <li><a href="{{ url_for('balance_sheet') }}">Balance Statement</a></li>
             <!-- <li><a href="url_for('debtors_report') }}">Debtors Report</a></li>
             <li><a href=" url_for('payables_report') }}">Payables Report</a></li>
             <li><a href="url_for('ledger_report') }}">Ledger Report</a></li>
@@ -35,6 +36,8 @@
             <li><a href="{{ url_for('make_payment') }}">Make Payment</a></li>
             <li><a href="{{ url_for('make_income') }}">Input Income</a></li>
             <li><a href="{{ url_for('create_expense') }}">Add Expense</a></li>
+            <li><a href="{{ url_for('upload_savings') }}">Upload Savings</a></li>
+            <li><a href="{{ url_for('startup') }}">Start Up</a></li>
            
         </ul>
     </nav>
