--- a/templates/index.html
+++ b/templates/index.html
@@ -107,6 +107,9 @@
             <a href="{{ url_for('upload_savings') }}">Upload Savings</a>
         </div>
         <div class="container">
+            <a href="{{ url_for('upload_withdraw') }}">Make Withdrawal</a>
+        </div>
+        <div class="container">
             <a href="{{ url_for('startup') }}">Start Up</a>
         </div>
     </div>
