--- a/templates/query/debtors_report.html
+++ b/templates/query/debtors_report.html
@@ -1,55 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>company Report</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+    </style>
 </head>
 <body>
-    <div style="width: 80%; margin: auto;">
-        <!-- Add a canvas element where the chart will be rendered -->
-        <canvas id="myChart"></canvas>
-      </div>
+    <h1>company Report</h1>
 
-    <!-- JavaScript for Data Visualization (if needed) -->
+    <h2>company Details</h2>
+    <p>company ID: {{ company.id }}</p>
+    <p>Name: {{ company.name }}</p>
+    <p>Balance BFW: {{ company.balance_bfd | currency}}</p>
+    <p>Balance: {{ company.amount_accumulated | currency}}</p>
+
+    <h2>Payments Received</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Payment ID</th>
+                <th>Date</th>
+                <th>Description</th>
+                <th>Reference Number</th>
+                <th>Amount</th>
+                <th>Balance</th>
+                <!-- Add more columns as needed -->
+            </tr>
+        </thead>
+        <tbody>
+            {% for payment in payments %}
+            <tr>
+                <td>{{ payment.id }}</td> 
+                <td>{{ payment.date }}</td>
+                <td>{{ payment.description}}</td>
+                <td>{{ payment.ref_no}}</td>
+                <td>{{ payment.amount | currency }}</td>
+                <td>{{ payment.company_balance | currency}}</td>
+                <!-- Add more columns as needed -->
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    <h1>Loan Information</h1>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Person Name</th>
+                <th>Amount</th>
+                <th>Interest Rate</th>
+                <th>Balance</th>
+                <th>Start Date</th>
+                <th>Due Date</th>
+                <th>Is Paid</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for loan in loans %}
+            <tr>
+                <td>{{ loan.id }}</td>
+                <td><a href="{{url_for('loan_account',person_id=loan.person.id)}}">{{ loan.person.name }}</a></td>  <!-- Fetching the person's name -->
+                <td>{{ loan.amount | currency }}</td>
+                <td>{{ loan.interest_rate }}</td>
+                <td>{{ loan.person.loan_balance | currency }}</td>
+                <td>{{ loan.start_date }}</td>
+                <td>{{ loan.end_date }}</td>
+                <td>{{ loan.is_paid }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    
+    <h2>Download Excel Report</h2>
+    <button id="downloadExcelButton">Download Report</button>
+
+    <h2>Download PDF Report</h2>
+    <button id="downloadPdfButton">Download Report</button>
+
     <script>
-         
-        const balanceSheetData = JSON.parse('{{ balance_sheet_data|tojson|safe }}');
+        // Get the button element by its ID
+        var buttonExcel = document.getElementById("downloadExcelButton");
+        var buttonPdf = document.getElementById("downloadPdfButton");
 
-        // Function to create the chart using Chart.js
-        function createChart() {
-            const ctx = document.getElementById('myChart').getContext('2d');
-            const myChart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ['Assets', 'Liabilities & Equity'],
-                    datasets: [{
-                        label: 'Amount (N)',
-                        data: [balanceSheetData.total_assets, balanceSheetData.total_liabilities],
-                        backgroundColor: [
-                            'rgba(75, 192, 192, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
-                        ],
-                        borderColor: [
-                            'rgba(75, 192, 192, 1)',
-                            'rgba(255, 99, 132, 1)',
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
-        }
+        // Define the link URL
+        var linkUrlExcel = "{{url_for('download_excel',type='company',type_id=company.id)}}";
+        var linkUrlPdf = "{{url_for('download_pdf',type='company',type_id=company.id)}}";
 
-        // Fetch data and create the chart when the page loads
-        document.addEventListener('DOMContentLoaded', function() {
-            createChart();
+        // Add a click event listener to the button
+        buttonExcel.addEventListener("click", function() {
+            // Redirect to the link URL
+            window.location.href = linkUrlExcel;
+        });
+        buttonPdf.addEventListener("click", function() {
+            // Redirect to the link URL
+            window.location.href = linkUrlPdf;
         });
     </script>
 </body>
