--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
 }
 
 /* Login page start  hex= D7262C, d7262c82*/
@@ -15,6 +16,7 @@
     background-color: #483d8b;
     background-size: cover;
     background-position: center;
+    /* background: url('static\images\darkslate.jpg') no-repeat; */
 }
 
 .login .wrapper {
@@ -26,11 +28,6 @@
     border:2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(30px);
     box-shadow: 0 0 10px rgba(0,0,0,.2);
-}
-
-.login .wrapper img{
-    max-width: 100%;
-    padding-bottom: 15px;
 }
 
 .login .wrapper .input-box {
@@ -63,6 +60,7 @@
     top: 50%;
     transform: translateY(-50%);
     font-size: 20px;
+    color: #000;
 }
 
 .login .wrapper .btn {
@@ -83,19 +81,20 @@
 
 /* index page start */
 .index {
-    background-color: #483d8b;
+    background-color: #ffffff;
     margin: 0 auto;
-    max-width: 50em;
+    max-width: 80em;
     line-height: 1.5;
-    padding: 4em 1em;
-    color: #000;
+    padding: 2em 1em;
+    /* color: #555; */
 }
 
 .index #topic{
     margin-top: 1em;
-    padding-top: 1em;
-    color: #000;
+    /*padding-top: 1em; */
+    color: #483d8b;
     display: block;
+    background: #f5f5f5;
 }
 
 .index .all-cards {
@@ -110,7 +109,7 @@
 }
 
 .index .all-cards * {
-    flex: 1 1 200px;
+    flex: 1 1 150px;
     
 }
 .index .card {
@@ -123,28 +122,29 @@
     backdrop-filter: blur(30px);
     box-shadow: 0 0 10px rgba(0,0,0,.2);
     /* text-align: center; */
+    background-color: #483d8b;
 }
 
-.index .card:hover {
+/* .index .card:hover {
     border: 1px solid #746cc0;
     background: #746cc0;
     transition: 1s;
-}
-
+} */
 
 .index a{
-    color: #000;
+    color: #fff;
     line-height: 2.5;
     text-decoration: none;
 }
 
 .index a:hover {
     text-decoration: underline;
-    transition: 1s;
+    transition: 0s;
+    /* color: #000; */
 }
 
 .index #nav {
-    border-bottom: #000 solid;
+    border-bottom: #483d8b solid;
     /* border-style: solid; */
 }
 
@@ -153,18 +153,27 @@
     /* font-weight: 300; */
 }
 
+.index .all-cards .container a{
+    font-size: 20px;
+}
 .index #nav .tail{
     float: right;
 }
 
 .index #nav a{
     font-size: 30px;
+    color: #483d8b;
 }
 
 .index #nav a:hover{
     text-decoration: none;
     box-shadow: 0 0 10px rgba(0,0,0,.2);
     transition: 0s;
+    /* color: #000; */
+}
+
+.index #nav .tail i{
+    color: #483d8b;
 }
 
 .index #nav a i:hover{
@@ -174,9 +183,7 @@
 
 .index #topic h1{
     text-align: center;
+    color: #000;
+    padding: 2rem;
 }
-
-/* .index .card .container a{
-    font-size: 15px;
-} */
 /* index page end */
