--- a/templates/login.html
+++ b/templates/login.html
@@ -1,79 +1,50 @@
-{%extends 'base.html' %}
-{%block title%}
-Login
-{% endblock %}
-{%block content%}
-  <body>
-    {% if error %}
-      <p><strong>Error</strong>:{{error}}</p>
-    {% endif %}
-    <section class="vh-100" style="background-color: #eee;">
-  <div class="container h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-lg-12 col-xl-11">
-        <div class="card text-black" style="border-radius: 25px;">
-          <div class="card-body p-md-5">
-            <div class="row justify-content-center">
-              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="\static\css\style.css">
+</head>
+<body class='login'>
+    <div class="wrapper">
+        <form method="POST">
+            <!-- <img src="\static\images\coolink2.png" alt="coollinks-logo"> -->
+            
+            <h1 style='text-align: center'> Login </h1>
+            <div class="input-box">
+                <!-- <input type="text" placeholder="username" required> -->
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Log In</p>
+                {{form.hidden_tag()}}
+                {{form.identifier(class_="input", placeholder='email')}}
 
-                <form class="mx-1 mx-md-4" id = "login_form" method="post">
-
-<!--                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      <input type="text" id="form3Example1c" class="form-control" required/>
-                      <label class="form-label" for="form3Example1c">Your Name</label>
-                    </div>
-                  </div> -->
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      {{ form.hidden_tag() }}
-                      {{form.identifier(class_="form-control")}}
-                      <label class="form-label" for="email">Email</label>
-                    </div>
-                  </div>
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      {{form.password(class_="form-control")}}
-                      <label class="form-label" for="psw">Password</label>
-                    </div>
-                  </div>
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-
-                  </div>
-
-
-
-                  <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    {{form.submit(class_="btn btn-primary btn-lg")}}
-                  </div>
-
-                </form>
+                <i class="fa-solid fa-user"></i>
+                <!-- <label class="form-label" for="email">Email</label> -->
                 
-				
-
-              </div>
-              <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
-                <img src="static/images/steak.jpeg"
-                  class="img-fluid" alt="Sample image">
-
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
-  </body>
-{% endblock %}
+            <div class="input-box">
+                <!-- <input type="text" placeholder="password" required> -->
+
+                {{form.password(class_="input", placeholder_='password')}}
+                <i class="fa-solid fa-lock"></i>
+
+                <!--<label class="form-label" for="psw">Password</label>-->
+
+            </div>
+
+
+
+
+            <!-- <button type="submit" class="btn">
+                Login
+            </button> -->
+
+            {{form.submit(class_="btn")}}
+
+        </form>
+    </div>
+</body>
+</html>
