--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div class="container">
-            <a href="{{ url_for('upload_withdraw') }}">Make Withdrawal</a>
+            <a href="{{ url_for('upload_savings') }}">Make Withdrawal</a>
         </div>
         <div class="container">
             <a href="{{ url_for('startup') }}">Start Up</a>
