--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Times New Roman', Times, serif;
     color: #fff;
 }
 
@@ -85,7 +85,7 @@
     margin: 0 auto;
     max-width: 80em;
     line-height: 1.5;
-    padding: 2em 1em;
+    padding: 1em 1em;
     /* color: #555; */
 }
 
@@ -124,12 +124,6 @@
     /* text-align: center; */
     background-color: #483d8b;
 }
-
-/* .index .card:hover {
-    border: 1px solid #746cc0;
-    background: #746cc0;
-    transition: 1s;
-} */
 
 .index a{
     color: #fff;
@@ -181,9 +175,121 @@
     transition: 0s;
 }
 
+.index #nav #head:hover {
+    transition: none;
+}
+
 .index #topic h1{
     text-align: center;
     color: #000;
     padding: 2rem;
 }
 /* index page end */
+
+/*QUERY START */
+
+/*base start */
+
+.index #nav #arrow i {
+    color: #483d8b;
+    margin-right: 10px;
+}
+
+/*base end */
+
+/* Person start */
+
+#person *{
+    color: #000;
+    max-width: 90em;
+    margin: 0 auto;
+}
+
+#person .tab-content {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 0.9em;
+    min-width: 400px;
+}
+
+#person .tab-content  tr th {
+    background-color: #483d8b;
+    color: #fff;
+    text-align: left;
+    font-weight: bold;
+}
+
+#person th, #person td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+#person .tab-content  tbody tr:nth-of-type(odd) {
+    background-color: #f3f3f3;
+}
+
+#person .tab-content  tbody tr:last-of-type {
+    border-bottom: 2px solid #483d8b;
+}
+
+#person button {
+    margin: 2em 2em;
+    /* border: 2px solid ;
+    padding: 10px; */
+
+    display: inline-block;
+    text-decoration: none;
+    border: 1px solid #483d8b;
+    padding: 12px 34px;
+    font-size: 20px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+#person button:hover {
+    border: 1px solid #483d8b;
+    background: #483d8b;
+    transition: 0s;
+    color: #ffffff;
+}
+
+#person .tab-content  tr a {
+    text-decoration: none;
+}
+
+#person .tab-content  tr a:hover {
+    text-decoration: underline;
+} 
+
+#person .dp .p-tag{
+    border-left: 1px dotted #483d8b;
+    padding: 10px;
+    /* border: 1px dotted #483d8b; */
+}
+
+#person .dp .p-tag:last-of-type{
+    background-color: #483d8b;
+    border: none
+}
+
+#person .dp .p-tag:last-of-type h2{
+    color: #ffffff;
+}
+
+#person .dp .p-tag:first-of-type{
+    border: none
+}
+
+#person .dp{
+    display: flex;
+    margin: 20px 0 30px;
+    border-radius: 5px;
+    border: 1px dotted #483d8b;
+}
+
+/* Person end */
+
+/* QUERY END*/
+
