--- a/templates/base.html
+++ b/templates/base.html
@@ -1,74 +1,22 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <meta name="description" content="Recipes with Flask">
-  </head>
-  
-  <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{{url_for('index')}}">S&M</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-             
-              <li class="nav-item">
-                <a class="nav-link" href="{{url_for('index')}}">Home</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link" href="">About</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link" href="">My Recipes</a>
-              </li>
-            </ul>
-              
-            {%block search %}
-            
-            {%endblock%}
-            {%if current_user.is_authenticated%}
-            <a href="{{url_for('logout')}}">
-            <button type="button" class="btn btn-default btn-sm btn-outline-dark text-light">
-              <span class="glyphicon glyphicon-log-out"></span> Log out
-            </button>
-            </a>
-            {% else %}
-            <a href="{{url_for('login')}}">
-            <button type="button" class="btn btn-default btn-sm btn-outline-dark text-light">
-              <span class="glyphicon glyphicon-log-out"></span> Log in
-            </button>
-            </a>
-            <a href="">
-            <button type="button" class="btn btn-default btn-sm btn-outline-dark text-light">
-              <span class="glyphicon glyphicon-log-out"></span> Sign Up
-            </button>
-            </a>
-            {% endif %}
-          </div>
-        </div>
-      </nav>
-      {% block content %}  {% endblock %}
-    
-    <footer class="text-muted py-5 border-top border-dark" style="margin-top: 3rem; padding: 2rem 0 2rem 0;">
-      <div class="container">
-        <p class="float-end mb-1">
-          <a href="#">Back to top</a>
-        </p>
-        <p class="mb-1"> © S&M </p>
-      </div>
-    </footer>
-      
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-    alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
-  </body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}{% endblock  %}</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="\static\css\style.css">
+</head>
+<body>
+    <header class="index">
+        <section id="nav">
+            {%block anchor%}<a href="{{url_for('index')}}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>{%endblock%}
+            <a id="head">{% block header%}{% endblock  %}</a>
+            <a href="#" class="tail"><i class="fa-sharp fa-solid fa-right-from-bracket"></i></a>
+        </section>
+    </header>
 
+    {%block content%} {%endblock%}
+</body>
+</html>
