--- a/templates/query/Bank_report.html
+++ b/templates/query/Bank_report.html
@@ -1,81 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Bank Report</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-    </style>
-</head>
-<body>
-    <h1>Bank Report</h1>
+{%extends 'base.html' %}
 
-    <h2>Bank Details</h2>
-    <p>Bank ID: {{ bank.id }}</p>
-    <p>Name: {{ bank.name }}</p>
-    <p>Balance BFW: {{ bank.balance_bfd | currency}}</p>
-    <p>Balance: {{ bank.new_balance | currency}}</p>
+{%block title%}
+Bank Report
+{% endblock %}
 
-    <h2>Payments Received</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Payment ID</th>
-                <th>Date</th>
-                <th>Description</th>
-                <th>Reference Number</th>
-                <th>Amount</th>
-                <th>Balance</th>
-                <!-- Add more columns as needed -->
-            </tr>
-        </thead>
-        <tbody>
-            {% for payment in payments %}
-            <tr>
-                <td>{{ payment.id }}</td> 
-                <td>{{ payment.date }}</td>
-                <td>{{ payment.description}}</td>
-                <td>{{ payment.ref_no}}</td>
-                <td>{{ payment.amount | currency }}</td>
-                <td>{{ payment.bank_balance | currency}}</td>
-                <!-- Add more columns as needed -->
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+{% block header%}
+EMPLOYEE DETAILS
+{% endblock  %}
 
-    <p>Total Amount Received: {{ total_amount | currency }}</p>
-    <h2>Download Excel Report</h2>
-    <button id="downloadExcelButton">Download Report</button>
+{%block content%}
 
-    <h2>Download PDF Report</h2>
-    <button id="downloadPdfButton">Download Report</button>
+<body id="person">
+    <table class="tab-content">
 
-    <script>
-        // Get the button element by its ID
-        var buttonExcel = document.getElementById("downloadExcelButton");
-        var buttonPdf = document.getElementById("downloadPdfButton");
 
-        // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='bank',type_id=bank.id)}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='bank',type_id=bank.id)}}";
-
-        // Add a click event listener to the button
-        buttonExcel.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlExcel;
-        });
-        buttonPdf.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlPdf;
-        });
-    </script>
-</body>
-</html>
+{%endblock%}
