--- a/templates/query/loan_account.html
+++ b/templates/query/loan_account.html
@@ -1,82 +1,81 @@
-<!-- payments.html -->
-<html>
-<head>
-    <title>Person Payments</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-    </style>
-</head>
-<body>
-    <h1>Coolink Cooperative Loan Account</h1>
-    <p>Name: {{ person.name }}</p>
-    <p>Company: {{ person.company.name }}</p>
-    <p>Member ID: {{ person.employee_id }}</p>
-    <p>Loan: {{ person.loan_balance | currency }}</p>
+{%extends 'base.html' %}
+
+{%block title%}
+Person Payments
+{% endblock %}
+
+{% block header%}
+COOLINK CO-OPERATIVE LOAN ACCOUNT
+{% endblock  %}
+
+{% block anchor%}
+<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
+
+{%block content%}
+<body id="person">
+    <div class="dp">
+        <div class='p-tag'><h2>Name: {{ person.name }}</h2></div>
+        <div class='p-tag'><h2>Company: {{ person.company.name }}</h2></div>
+        <div class='p-tag'><h2>Member ID: {{ person.employee_id }}</h2></div>
+        <div class='p-tag'><h2>Loan: {{ person.loan_balance | currency }}</h2></div>
+    </div>
+        
+        <table class='tab-content'>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Refrence Number</th>
+                    <th>Description</th>
+                    <th>Amount</th>
+                    <th>Balance</th>
+                </tr>
+            </thead>
+            <tbody>
+                
+                <tr>
+                    <td> - </td>
+                    <td> - </td>
+                    <td>Balance B/FWD</td>
+                    <td>{{ person.loan_balance_bfd| currency }}</td>
+                    <td>{{ person.loan_balance_bfd| currency }}</td>
+                </tr>
+                    {% for payment in payments %}
+                            <tr>
+                                <td>{{ payment.date }}</td>
+                                <td>{{ payment.ref_no }}</td>
+                                <td>{{ payment.description }}</td>
+                                <td>{{-payment.amount | currency }}</td>
+                                <td>{{ payment.balance | currency }}</td>
+                            </tr>
+                    {% endfor %}
+                
+            </tbody>
+        </table>
+
+        <button id="downloadExcelButton">Download Excel Report</button>
+
+        <button id="downloadPdfButton">Download PDF Report</button>
     
-    <h2>Payments</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Refrence Number</th>
-                <th>Description</th>
-                <th>Amount</th>
-                <th>Balance</th>
-            </tr>
-        </thead>
-        <tbody>
-            
-            <tr>
-                <td> - </td>
-                <td> - </td>
-                <td>Balance B/FWD</td>
-                <td>{{ person.loan_balance_bfd| currency }}</td>
-                <td>{{ person.loan_balance_bfd| currency }}</td>
-            </tr>
-                {% for payment in payments %}
-                        <tr>
-                            <td>{{ payment.date }}</td>
-                            <td>{{ payment.ref_no }}</td>
-                            <td>{{ payment.description }}</td>
-                            <td>{{-payment.amount | currency }}</td>
-                            <td>{{ payment.balance | currency }}</td>
-                        </tr>
-                {% endfor %}
-            
-        </tbody>
-    </table>
-    <h2>Download Excel Report</h2>
-    <button id="downloadExcelButton">Download Report</button>
+        <script>
+            // Get the button element by its ID
+            var buttonExcel = document.getElementById("downloadExcelButton");
+            var buttonPdf = document.getElementById("downloadPdfButton");
+    
+            // Define the link URL
+            var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id=person.id)}}";
+            var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id=person.id)}}";
+    
+            // Add a click event listener to the button
+            buttonExcel.addEventListener("click", function() {
+                // Redirect to the link URL
+                window.location.href = linkUrlExcel;
+            });
+            buttonPdf.addEventListener("click", function() {
+                // Redirect to the link URL
+                window.location.href = linkUrlPdf;
+            });
+        </script>
+    </body>
 
-    <h2>Download PDF Report</h2>
-    <button id="downloadPdfButton">Download Report</button>
-
-    <script>
-        // Get the button element by its ID
-        var buttonExcel = document.getElementById("downloadExcelButton");
-        var buttonPdf = document.getElementById("downloadPdfButton");
-
-        // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='loan',type_id=person.id)}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='loan',type_id=person.id)}}";
-
-        // Add a click event listener to the button
-        buttonExcel.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlExcel;
-        });
-        buttonPdf.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlPdf;
-        });
-    </script>
-</body>
-</html>
+{%endblock%}
