--- a/templates/query/person.html
+++ b/templates/query/person.html
@@ -1,50 +1,47 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Person Details</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-    </style>
-</head>
-<body>
-    <h1>Person Details</h1>
-    <table>
-        <tr>
-            <th>Employee ID</th>
-            <th>Is Admin</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Phone Number</th>
-            <th>Savings Balance</th>
-            <th>Loan Balance</th>
-            <th>Company </th>
-        </tr>
-        {%for person in persons%}
-        <tr>
-            <td>{{ person.employee_id }}</td>
-            <td>{{ person.is_admin }}</td>
-            <td>{{ person.name }}</td>
-            <td>{{ person.email }}</td>
-            <td>{{ person.phone_no }}</td>
-            <td><a href="{{url_for('savings_account',person_id=person.id)}}">{{ person.total_balance | currency}}</a></td>
-            <td><a href="{{url_for('loan_account',person_id=person.id)}}">{{ person.loan_balance | currency}}</a></td>
-            <td>{{ person.company.name }}</td>
-        </tr>
-        {%endfor%}
-    </table>
-    <h2>Download Excel Report</h2>
-    <button id="downloadExcelButton">Download Report</button>
+{%extends 'base.html' %}
 
-    <h2>Download PDF Report</h2>
-    <button id="downloadPdfButton">Download Report</button>
+{%block title%}
+Employee Details
+{% endblock %}
+
+{% block header%}
+EMPLOYEE DETAILS
+{% endblock  %}
+
+{%block content%}
+
+<body id="person">
+    <table class="tab-content">
+        <tbody>
+            <tr>
+                <th>Employee ID</th>
+                <th>Is Admin</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+                <th>Savings Balance</th>
+                <th>Loan Balance</th>
+                <th>Company </th>
+            </tr>
+            {%for person in persons%}
+            <tr>
+                <td>{{ person.employee_id }}</td>
+                <td>{{ person.is_admin }}</td>
+                <td>{{ person.name }}</td>
+                <td>{{ person.email }}</td>
+                <td>{{ person.phone_no }}</td>
+                <td><a href="{{url_for('savings_account',person_id=person.id)}}">{{ person.total_balance | currency}}</a></td>
+                <td><a href="{{url_for('loan_account',person_id=person.id)}}">{{ person.loan_balance | currency}}</a></td>
+                <td>{{ person.company.name }}</td>
+            </tr>
+            {%endfor%}
+        </tbody>
+    </table>
+    <!-- <h2>Download Excel Report</h2> -->
+    <button id="downloadExcelButton">Download Excel Report</button>
+
+    <!-- <h2>Download PDF Report</h2> -->
+    <button id="downloadPdfButton">Download PDF Report</button>
 
     <script>
         // Get the button element by its ID
@@ -66,4 +63,4 @@
         });
     </script>
 </body>
-</html>
+{%endblock%}
