--- a/templates/query/savings_account.html
+++ b/templates/query/savings_account.html
@@ -1,79 +1,76 @@
-<!-- payments.html -->
-<html>
-<head>
-    <title>Person Payments</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-    </style>
-</head>
-<body>
-    <h1>Coolink Cooperative Savings Account</h1>
-    <p>Name: {{ person.name }}</p>
-    <p>Company: {{ person.company.name }}</p>
-    <p>Member ID: {{ person.employee_id }}</p>
-    <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Refrence Number</th>
-                <th>Description</th>
-                <th>Amount</th>
-                <th>Balance</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td> - </td>
-                <td> - </td>
-                <td>Balance B/FWD</td>
-                <td>{{ person.balance_bfd | currency }}</td>
-                <td>{{ person.balance_bfd | currency }}</td>
-            </tr>
-            {% for payment in person.payments_made %}
-                <tr>
-                    <td>{{ payment.date }}</td>
-                    <td>{{ payment.ref_no }}</td>
-                    <td>{{ payment.description }}</td>
-                    <td>{{ payment.amount | currency }}</td>
-                    <td>{{ payment.balance | currency }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <h1>Total balance: {{ person.total_balance | currency }}</h1>
+{%extends 'base.html' %}
 
-    <h2>Download Excel Report</h2>
-    <button id="downloadExcelButton">Download Report</button>
+{%block title%}
+loan account
+{% endblock %}
 
-    <h2>Download PDF Report</h2>
-    <button id="downloadPdfButton">Download Report</button>
+{% block header%}
+COOLINK CO-OPERATIVE SAVINGS ACCOUNT
+{% endblock  %}
 
-    <script>
-        // Get the button element by its ID
-        var buttonExcel = document.getElementById("downloadExcelButton");
-        var buttonPdf = document.getElementById("downloadPdfButton");
+{% block anchor%}
+<a href="{{ url_for('get_persons') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
+{% endblock  %}
 
-        // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='savings',type_id=person.id)}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='savings',type_id=person.id)}}";
+{%block content%}
+<body id="person">
+    <div class="dp">
+        <div class='p-tag'><h2>Name: {{ person.name }}</h2></div>
+        <div class='p-tag'><h2>Company: {{ person.company.name }}</h2></div>
+        <div class='p-tag'><h2>Member ID: {{ person.employee_id }}</h2></div>
+        <div class='p-tag'><h2>Total balance: {{ person.total_balance | currency }}</h2></div>
+    </div>
+    <table class="tab-content">
+                <tbody>
+                    <tr>
+                        <th>Date</th>
+                        <th>Refrence Number</th>
+                        <th>Description</th>
+                        <th>Amount</th>
+                        <th>Balance</th>
+                    </tr>
+                    <tr>
+                        <td> - </td>
+                        <td> - </td>
+                        <td>Balance B/FWD</td>
+                        <td>{{ person.balance_bfd | currency }}</td>
+                        <td>{{ person.balance_bfd | currency }}</td>
+                    </tr>
+                    {% for payment in person.payments_made %}
+                        <tr>
+                            <td>{{ payment.date }}</td>
+                            <td>{{ payment.ref_no }}</td>
+                            <td>{{ payment.description }}</td>
+                            <td>{{ payment.amount | currency }}</td>
+                            <td>{{ payment.balance | currency }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        
+            <button id="downloadExcelButton">Download Excel Report</button>
+        
+            <button id="downloadPdfButton">Download PDF Report</button>
+        
+            <script>
+                // Get the button element by its ID
+                var buttonExcel = document.getElementById("downloadExcelButton");
+                var buttonPdf = document.getElementById("downloadPdfButton");
+        
+                // Define the link URL
+                var linkUrlExcel = "{{url_for('download_excel',type='savings',type_id=person.id)}}";
+                var linkUrlPdf = "{{url_for('download_pdf',type='savings',type_id=person.id)}}";
+        
+                // Add a click event listener to the button
+                buttonExcel.addEventListener("click", function() {
+                    // Redirect to the link URL
+                    window.location.href = linkUrlExcel;
+                });
+                buttonPdf.addEventListener("click", function() {
+                    // Redirect to the link URL
+                    window.location.href = linkUrlPdf;
+                });
+            </script>
+        </body>
 
-        // Add a click event listener to the button
-        buttonExcel.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlExcel;
-        });
-        buttonPdf.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlPdf;
-        });
-    </script>
-</body>
-</html>
+{%endblock%}
