--- a/templates/query/savings_payment.html
+++ b/templates/query/savings_payment.html
@@ -1,70 +1,69 @@
-<!-- payments.html -->
-<html>
-<head>
-    <title>Person Payments</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-    </style>
-</head>
-<body>
-    <h1>Coolink Cooperative Savings Account</h1>
-    <table>
-        <thead>
+{%extends 'base.html' %}
+
+{%block title%}
+Person Payments
+{% endblock %}
+
+{% block header%}
+Coolink Cooperative Savings Account
+{% endblock  %}
+
+{%block content%}
+<body id="person">
+    <table class="tab-content">
+    
+    <tbody>
+
+        <tr>
+            <th>Date</th>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Amount</th>
+            
+        </tr>
+        
+        {% for payment in payments %}
             <tr>
-                <th>Date</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Amount</th>
+                <td>{{ payment.date }}</td>
+                <td>
+                    <a href="{{url_for('savings_account',person_id=payment.payer.id)}}">{{ payment.payer.name}}</a>
+                </td>
+                <td>{{ payment.description}}</td>
+                <td>{{ payment.amount | currency}}</td>
                 
             </tr>
-        </thead>
-        <tbody>
-            {% for payment in payments %}
-                <tr>
-                    <td>{{ payment.date }}</td>
-                    <td>
-                        <a href="{{url_for('savings_account',person_id=payment.payer.id)}}">{{ payment.payer.name}}</a>
-                    </td>
-                    <td>{{ payment.description}}</td>
-                    <td>{{ payment.amount | currency}}</td>
-                    
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+        {% endfor %}
+    </tbody>
+</table>
 
-    <h2>Download Excel Report</h2>
-    <button id="downloadExcelButton">Download Report</button>
+<button id="downloadExcelButton">Download Excel Report</button>
 
-    <h2>Download PDF Report</h2>
-    <button id="downloadPdfButton">Download Report</button>
+<button id="downloadPdfButton">Download PDF Report</button>
 
-    <script>
-        // Get the button element by its ID
-        var buttonExcel = document.getElementById("downloadExcelButton");
-        var buttonPdf = document.getElementById("downloadPdfButton");
+<script>
+    // Get the button element by its ID
+    var buttonExcel = document.getElementById("downloadExcelButton");
+    var buttonPdf = document.getElementById("downloadPdfButton");
 
-        // Define the link URL
-        var linkUrlExcel = "{{url_for('download_excel',type='savings',type_id='None')}}";
-        var linkUrlPdf = "{{url_for('download_pdf',type='savings',type_id='None')}}";
+    // Define the link URL
+    var linkUrlExcel = "{{url_for('download_excel',type='savings',type_id='None')}}";
+    var linkUrlPdf = "{{url_for('download_pdf',type='savings',type_id='None')}}";
 
-        // Add a click event listener to the button
-        buttonExcel.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlExcel;
-        });
-        buttonPdf.addEventListener("click", function() {
-            // Redirect to the link URL
-            window.location.href = linkUrlPdf;
-        });
-    </script>
+    // Add a click event listener to the button
+    buttonExcel.addEventListener("click", function() {
+        // Redirect to the link URL
+        window.location.href = linkUrlExcel;
+    });
+    buttonPdf.addEventListener("click", function() {
+        // Redirect to the link URL
+        window.location.href = linkUrlPdf;
+    });
+</script>
 </body>
-</html>
+
+
+
+
+
+
+{% endblock  %}
