added date filters

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,19 @@
             <a href="{{ url_for('get_income') }}">Income Statement</a> 
         </div>
     </div>
+
+    <div class="card">
+        <div class="container">
+            <a href="{{ url_for('companies_report') }}">Company Report</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="container">
+            <a href="{{ url_for('balance_sheet') }}">Financial Position</a>
+        </div>
+    </div>
+
     </div>
 
     <h1>Create New Entries</h1>
