--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -51,10 +51,10 @@
                 <!-- Add your navigation links here -->
                 <ul class="nav flex-column h-100">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link 1</a>
+                        <a class="nav-link" href="{{ url_for('forms') }}">Forms</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link 2</a>
+                        <a class="nav-link" href="{{ url_for('queries') }}">Queries</a>
                     </li>
                     <!-- Add more navigation links as needed -->
                 </ul>
