--- a/templates/forms.html
+++ b/templates/forms.html
@@ -1,3 +1,9 @@
+
+
+</body>
+</html>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,53 +20,6 @@
     </section>
 
     <section id="topic">
-    <h1>Welcome to our Accounting Website</h1>
-    
-    <div class="all-cards">
-    <div class="card">
-        <!-- <img src="img_avatar.png" alt="Avatar" style="width:100%"> -->
-        <div class="container">
-            <a href="{{ url_for('get_persons') }}">View Members</a>
-        </div>
-    </div>
-    
-    <div class="card">
-        <div class="container">
-            <a href="{{ url_for('get_payments') }}">Members Savings Account</a> 
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="container">
-            <a href="{{ url_for('get_loan') }}">Members Loan</a>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="container">
-            <a href="{{ url_for('bank_report') }}">Bank Report</a>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="container">
-            <a href="{{ url_for('get_income') }}">Income Statement</a> 
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="container">
-            <a href="{{ url_for('companies_report') }}">Company Report</a>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="container">
-            <a href="{{ url_for('balance_sheet') }}">Financial Position</a>
-        </div>
-    </div>
-
-    </div>
 
     <h1>Create New Entries</h1>
 
