added expense and roles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'Times New Roman', Times, serif;
-    color: #fff;
+    /* color: #fff; */
 }
 
 /* Login page start  hex= D7262C, d7262c82*/
